# recycling-flask-backend

./: .env.template  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  constants.py  database_controller.py  enums.py  models.py  schemas.py  util.py
app/routes/: __init__.py  bins.py  logs.py  motivations.py  other.py  purchases.py  recyclables.py  rewards.py  staff.py  statistics.py  submissions.py  users.py
tests/: conftest.py
tests/fixtures/: bin_fixtures.py  motivation_fixtures.py  purchase_fixtures.py  recyclable_fixtures.py  reward_fixtures.py  staff_fixtures.py  submission_fixtures.py  user_fixtures.py
tests/integration/app/routes/: test_bins.py  test_logs.py  test_motivations.py  test_other.py  test_purchases.py  test_recyclables.py  test_rewards.py  test_staff.py  test_statistics.py  test_submissions.py  test_users.py
tests/resources/images/empty-milk-jug/: empty-milk-jug.heic
tests/unit/app/: test_schemas.py
