[project]
name = "Recycling Project Backend"
version = "1.0.0"
description = "Built with Flask and SQLAlchemy."
readme = "README.md"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]

[tool.pylint.variables]
allowed-redefined-builtins = ["id", "bin"]

[tool.pylint.design]
min-public-methods = 0

[tool.pylint.messages_control]
disable = ["missing-docstring"]
